[package]
name = "atthemeimagebot"
version = "0.1.0"
authors = ["AlexStrNik <alex.str.nik@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
tbot = { version = "0.6", default-features = false, features = ["rustls"] }
tokio = { version = "0.2", features = ["macros"] }
lazy_static = "1.4"
attheme = "0.3"
image = "0.22"
